# voynich-entropy-analysis

./: .gitignore  README.md  pyproject.toml
examples/: run_analysis.py
src/voynich_analysis/: __init__.py  cli.py  entropy.py  monte_carlo.py
src/voynich_analysis/naibbe/: __init__.py  encoder.py  signatures.py
src/voynich_analysis/templates/: dashboard.html
tests/: test_entropy.py  test_monte_carlo.py  test_naibbe.py
