[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voynich-analysis"
version = "0.1.0"
description = "A computational analysis toolkit for the Voynich Manuscript using Shannon entropy and Monte Carlo simulations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]

[project.scripts]
voynich-analysis = "voynich_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
